Added help module (still WIP)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,10 +6,11 @@ add_subdirectory(tests)
 
 # Modules
 add_library(argparser STATIC modules/argparser.c)
+add_library(showhelp STATIC modules/showhelp.c)
 
 # Main
 add_executable(main main.c)
 
 # Link modules
-target_link_libraries(main argparser)
+target_link_libraries(main argparser showhelp)
 
