Automatically compile modules

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,13 +4,19 @@ add_subdirectory(unity)
 # Unit tests
 add_subdirectory(tests)
 
-# Modules
-add_library(argparser STATIC modules/argparser.c)
-add_library(showhelp STATIC modules/showhelp.c)
+# Automatically compile modules
+# Note: requires "cmake .." when a module is created/deleted
+file(GLOB moduleFiles "modules/*.c")
+foreach(ModuleSource ${moduleFiles})
+  string(REPLACE "${CMAKE_CURRENT_LIST_DIR}/" "" ModuleName ${ModuleSource}) # Remove path
+  string(REPLACE "modules/" "" ModuleName ${ModuleName}) # Remove subfolder
+  string(REPLACE ".c" "" ModuleName ${ModuleName}) # Remove extension
+  add_library(${ModuleName} STATIC ${ModuleSource})
+  list(APPEND Modules ${ModuleName})
+endforeach(ModuleSource)
 
 # Main
 add_executable(main main.c)
 
 # Link modules
-target_link_libraries(main argparser showhelp)
-
+target_link_libraries(main ${Modules})
