Make debugging easier Configure todo extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
     ".env": "plaintext",
     "main.h": "c",
     "argparser.h": "c",
-    "unity.h": "c"
+    "unity.h": "c",
+    "tohtml.h": "c",
+    "tohtml_h.h": "c"
   },
   "c-cpp-flylint.clang.pedantic": true,
   "c-cpp-flylint.lizard.enable": false,
@@ -28,4 +30,15 @@
     "ConfigurationNotChecked"
   ],
   "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
+  "cmake.debugConfig": {
+    "cwd": "/mnt/c/prog-stud/projects/markdown-html-conv",
+    "args": [
+      "-i",
+      "example.md",
+      "-o",
+      "example.html",
+      "-f",
+    ]
+  },
+  "todo-tree.filtering.ignoreGitSubmodules": true
 }
