Added a timeout when using CTest in vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,5 @@
 {
   "C_Cpp.errorSquiggles": "Disabled",
-  "files.associations": {
-    ".env": "plaintext",
-    "main.h": "c",
-    "argparser.h": "c",
-    "unity.h": "c",
-    "tohtml.h": "c",
-    "tohtml_h.h": "c"
-  },
   "c-cpp-flylint.clang.pedantic": true,
   "c-cpp-flylint.lizard.enable": false,
   "c-cpp-flylint.flexelint.enable": false,
@@ -40,5 +32,9 @@
       "-f",
     ]
   },
+  "cmake.ctestArgs": [
+    "--timeout",
+    "2"
+  ],
   "todo-tree.filtering.ignoreGitSubmodules": true
 }
