Prevent overwrite without -f flag Determine default output filename Made generating tests for modules a lot easier Basic file handling for conversion Added h[1-6] tag support Added br tag support Added a placeholder for HTML => MD conversion Manually included submodules (cmake) Added new tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,14 @@ foreach(ModuleSource ${moduleFiles})
   string(REPLACE "${CMAKE_CURRENT_LIST_DIR}/" "" ModuleName ${ModuleSource}) # Remove path
   string(REPLACE "modules/" "" ModuleName ${ModuleName}) # Remove subfolder
   string(REPLACE ".c" "" ModuleName ${ModuleName}) # Remove extension
-  add_library(${ModuleName} STATIC ${ModuleSource})
+  # Additional submodules
+  if("${ModuleName}" STREQUAL "tohtml")
+    add_library(${ModuleName} STATIC ${ModuleSource} "modules/exclusivetag.c" "modules/conv_def.c")
+  elseif("${ModuleName}" STREQUAL "tomd")
+    add_library(${ModuleName} STATIC ${ModuleSource} "modules/exclusivetag.c" "modules/conv_def.c")
+  else()
+    add_library(${ModuleName} STATIC ${ModuleSource})
+  endif()
   list(APPEND Modules ${ModuleName})
 endforeach(ModuleSource)
 
